fix category label on mobile project pages

--- a/css/project.scss
+++ b/css/project.scss
@@ -39,7 +39,9 @@
     display: inline-block;
     margin: 0;
     padding: 8px 12px;
-    transform: rotate(-90.0deg) translate(100%, -180%);
+    left: 0;
+    transform-origin: top left;
+    transform: rotate(-90.0deg);
 
     @include media-query(DESKTOP) {
       display: none;
